--- a/app/index.html
+++ b/app/index.html
@@ -117,8 +117,9 @@
         </h3>
         <div class="wrapper wrapper--medium wrapper--b-margin">
           <img
+            class="lazyload"
             sizes="(min-width: 970px) 976px,100vw"
-            srcset="
+            data-srcset="
               assets/images/first-trip-low-res.jpg  565w,
               assets/images/first-trip.jpg          976w,
               assets/images/first-trip-hi-dpi.jpg  1952w
