--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <title>Travel</title>
+    <title>Traveling-site</title>
     <meta
       name="keywords"
       content="Travel planning, travel bundles, travel escapes"
